Correct spacing method
Use justify-content (not margin) to get centering effect
Add gap between links

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  justify-content: space-between;
 }
 
 .logo {
@@ -12,8 +13,6 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 ul {
@@ -22,6 +21,7 @@ ul {
   margin: 0;
   padding: 0;
   display: flex;
+  gap: 10px;
 }
 
 a {
